# c_dev

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODOs.txt
assembly/samples/: hello.s
data_structures/: CMakeLists.txt
data_structures/array_deque/: CMakeLists.txt  array_deque.c  array_deque.h
data_structures/list/: list.c  list.h
data_structures/queue/: CMakeLists.txt  queue.c  queue.h
data_structures/string/: string.h  string_r.c  string_r.h
examples/c_std_version/: c_std_version.c
examples/consts/: consts.c
examples/format_specifiers/: format_specifiers.c
examples/local_variable_lifetime/: local_variable_lifetime.c
examples/ncurses/: ncurses.c
examples/pointers/: pointers.c
examples/pthread_conds/: pthread_conds.c
examples/pthread_mutexes/: pthread_mutexes.c
examples/pthread_spin_locks/: pthread_spin_locks.c
examples/setjmp/: setjmp.c
examples/struct_with_int_array_stack_allocated/: struct_with_int_array_stack_allocated.c
examples/structs/: structs.c
examples/unity_build/: a.c
examples/value_vs_reference_fields/: value_vs_reference_fields.c
examples/void_pointers/: void_pointers.c
exercises/type_specific_array_list/: type_specific_array_list.c
flags/: Makefile
samples/array_pointer_increment/: array_pointer_increment.c
samples/consts/: consts.c
samples/flexible_array_struct_members/: flexible_array_struct_members.c
samples/format_specifiers/: format_specifiers.c
samples/function_pointers/: a  function_pointers.c
samples/pointers/: pointers.c
unit_testing/: CMakeLists.txt  unit_testing.c  unit_testing.h
(+46 files in other folders)
